--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 {{ super() }}
-<h1> Hello from index! base + index friends forever! </h1>
+<h1> Hello from index! BK was here </h1>
 
 <ul>
     {% for m in menu %}
