--- a/templates/nasa.html
+++ b/templates/nasa.html
@@ -17,14 +17,14 @@
         <div class="header_container container">
             <div class="explore">
                 <a href="{{ url_for('index') }}">Explore</a>
-                <img class="arrow" src="images/arrowdown.png" alt="">
+                <img class="arrow" src="arrowdown.png" alt="">
                 <input type="text" placeholder="Search...">
             </div>
-            <img class="logo" src="images/logo.png" alt="">
+            <img class="logo" src="logo.png" alt="">
             <div class="Events">
                 <ul>
-                    <li><a href="#">Events <img class="arrow" src="images/arrowdow1.png" alt=""></a></li>
-                    <li><a href="#">Multimedia <img class="arrow" src="images/arrowdow1.png" alt=""></a></li>
+                    <li><a href="#">Events <img class="arrow" src="arrowdow1.png" alt=""></a></li>
+                    <li><a href="#">Multimedia <img class="arrow" src="arrowdow1.png" alt=""></a></li>
                 </ul>
                 <p class="live">LIVE</p>
             </div>
@@ -39,20 +39,20 @@
                         <p>Exoplanet is a natural planet in a planetary system outside our own Solar System.</p>
                         <button>Learn More</button>
                     </div>
-                    <img class="SS" src="images/SS.PNG" alt="">
+                    <img class="SS" src="SS.PNG" alt="">
                 </div>
                 <div class="describe_down">
                     <div class="describe_down1">
                         <p class="p1">HISTORY</p>
-                        <p class="p2">Nasa Broadcasts<img src="images/arrowup.png" alt=""></p>
+                        <p class="p2">Nasa Broadcasts<img src="arrowup.png" alt=""></p>
                     </div>
                     <div class="describe_down1">
                         <p class="p1">HISTORY</p>
-                        <p class="p2">Nasa Broadcasts<img src="images/arrowup.png" alt=""></p>
+                        <p class="p2">Nasa Broadcasts<img src="arrowup.png" alt=""></p>
                     </div>
                     <div class="describe_down1">
                         <p class="p1">HISTORY</p>
-                        <p class="p2">Nasa Broadcasts<img src="images/arrowup.png" alt=""></p>
+                        <p class="p2">Nasa Broadcasts<img src="arrowup.png" alt=""></p>
                     </div>
                 </div>
             </div>
@@ -63,7 +63,7 @@
                 <a href="https://science.nasa.gov/science-news/">
                     <div class="astronaut">
                         <div class="article">
-                            <img src="images/saved.png" alt="">
+                            <img src="saved.png" alt="">
                             <p class="p3">ARTICLE</p>
                         </div>
                         <div class="article_down">
@@ -75,7 +75,7 @@
                 <a href="https://science.nasa.gov">
                     <div class="milkway">
                         <div class="article">
-                            <img src="images/saved.png" alt="">
+                            <img src="saved.png" alt="">
                             <p class="p3">ARTICLE</p>
                         </div>
                         <div class="article_down">
@@ -96,7 +96,7 @@
                         rocky planets, and ice giants. Some are in the "habitable zone," where liquid water might exist,
                         suggesting potential for life.</p>
                 </div>
-                <img src="images/mars-153566_640.png" alt="">
+                <img src="mars-153566_640.png" alt="">
             </div>
         </div>
         <div class="more_container container">
@@ -106,25 +106,25 @@
                     <div class="more_img">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="images/arrowup.png" alt="">
+                            <img src="arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img1">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="images/arrowup.png" alt="">
+                            <img src="arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img2">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="images/arrowup.png" alt="">
+                            <img src="arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img3">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="images/arrowup.png" alt="">
+                            <img src="arrowup.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -132,25 +132,25 @@
                     <div class="more_img4">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="images/arrowup.png" alt="">
+                            <img src="arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img5">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="images/arrowup.png" alt="">
+                            <img src="arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img6">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="images/arrowup.png" alt="">
+                            <img src="arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img7">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="images/arrowup.png" alt="">
+                            <img src="arrowup.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -162,14 +162,14 @@
                 <p class="p6">Stay up-to-date on the latest news from NASA–from Earth to the Moon, the Solar System and
                     beyond.</p>
                 <p class="p7">We will never share your email address. <span>Privacy Policy</span></p>
-                <a href="#">Sign Up <img src="images/arrowup.png" alt=""></a>
+                <a href="#">Sign Up <img src="arrowup.png" alt=""></a>
             </div>
         </div>
     </main>
     <footer>
         <div class="footer_container container">
             <div class="content1">
-                <img src="images/logo.png" alt="">
+                <img src="logo.png" alt="">
                 <h4>National Aeronautics and Space Administration</h4>
                 <p>NASA explores the unknown in air and space, innovates for the benefit of humanity, and inspires the
                     world through discovery.</p>
