--- a/templates/nasa.html
+++ b/templates/nasa.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exoplanets</title>
-    <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="static/css/style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
 </head>
-
 <body>
     <header>
         <div class="header_container container">
             <div class="explore">
-                <a href="{{ url_for('index') }}">Explore</a>
-                <img class="arrow" src="arrowdown.png" alt="">
+                <a href="#">Explore</a>
+                <img class="arrow" src="static/images_html/arrowdown.png" alt="">
                 <input type="text" placeholder="Search...">
             </div>
-            <img class="logo" src="logo.png" alt="">
+            <img class="logo" src="static/images_html/logo.png" alt="">
             <div class="Events">
                 <ul>
-                    <li><a href="#">Events <img class="arrow" src="arrowdow1.png" alt=""></a></li>
-                    <li><a href="#">Multimedia <img class="arrow" src="arrowdow1.png" alt=""></a></li>
+                    <li><a href="#">Events <img class="arrow" src="static/images_html/arrowdow1.png" alt=""></a></li>
+                    <li><a href="#">Multimedia  <img class="arrow" src="static/images_html/arrowdow1.png" alt=""></a></li>
                 </ul>
                 <p class="live">LIVE</p>
             </div>
@@ -39,20 +37,20 @@
                         <p>Exoplanet is a natural planet in a planetary system outside our own Solar System.</p>
                         <button>Learn More</button>
                     </div>
-                    <img class="SS" src="SS.PNG" alt="">
+                    <img class="SS" src="static/images_html/SS.PNG" alt="">
                 </div>
                 <div class="describe_down">
                     <div class="describe_down1">
                         <p class="p1">HISTORY</p>
-                        <p class="p2">Nasa Broadcasts<img src="arrowup.png" alt=""></p>
+                        <p class="p2">Nasa Broadcasts<img src="static/images_html/arrowup.png" alt=""></p>
                     </div>
                     <div class="describe_down1">
                         <p class="p1">HISTORY</p>
-                        <p class="p2">Nasa Broadcasts<img src="arrowup.png" alt=""></p>
+                        <p class="p2">Nasa Broadcasts<img src="static/images_html/arrowup.png" alt=""></p>
                     </div>
                     <div class="describe_down1">
                         <p class="p1">HISTORY</p>
-                        <p class="p2">Nasa Broadcasts<img src="arrowup.png" alt=""></p>
+                        <p class="p2">Nasa Broadcasts<img src="static/images_html/arrowup.png" alt=""></p>
                     </div>
                 </div>
             </div>
@@ -63,7 +61,7 @@
                 <a href="https://science.nasa.gov/science-news/">
                     <div class="astronaut">
                         <div class="article">
-                            <img src="saved.png" alt="">
+                            <img src="static/images_html/saved.png" alt="">
                             <p class="p3">ARTICLE</p>
                         </div>
                         <div class="article_down">
@@ -75,7 +73,7 @@
                 <a href="https://science.nasa.gov">
                     <div class="milkway">
                         <div class="article">
-                            <img src="saved.png" alt="">
+                            <img src="static/images_html/saved.png" alt="">
                             <p class="p3">ARTICLE</p>
                         </div>
                         <div class="article_down">
@@ -90,13 +88,9 @@
             <div class="inf_container container">
                 <div class="inf_content">
                     <h1>Information about exoplanets</h1>
-                    <p>Exoplanets are planets that orbit stars outside our solar system. The first confirmed exoplanet
-                        was discovered in 1992, and thousands have since been identified using methods like transit,
-                        radial velocity, and direct imaging. They vary in size and composition, including gas giants,
-                        rocky planets, and ice giants. Some are in the "habitable zone," where liquid water might exist,
-                        suggesting potential for life.</p>
+                    <p>Exoplanets are planets that orbit stars outside our solar system. The first confirmed exoplanet was discovered in 1992, and thousands have since been identified using methods like transit, radial velocity, and direct imaging. They vary in size and composition, including gas giants, rocky planets, and ice giants. Some are in the "habitable zone," where liquid water might exist, suggesting potential for life.</p>
                 </div>
-                <img src="mars-153566_640.png" alt="">
+                <img src="static/images_html/mars-153566_640.png" alt="">
             </div>
         </div>
         <div class="more_container container">
@@ -106,25 +100,25 @@
                     <div class="more_img">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="arrowup.png" alt="">
+                            <img src="static/images_html/arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img1">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="arrowup.png" alt="">
+                            <img src="static/images_html/arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img2">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="arrowup.png" alt="">
+                            <img src="static/images_html/arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img3">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="arrowup.png" alt="">
+                            <img src="static/images_html/arrowup.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -132,25 +126,25 @@
                     <div class="more_img4">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="arrowup.png" alt="">
+                            <img src="static/images_html/arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img5">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="arrowup.png" alt="">
+                            <img src="static/images_html/arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img6">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="arrowup.png" alt="">
+                            <img src="static/images_html/arrowup.png" alt="">
                         </div>
                     </div>
                     <div class="more_img7">
                         <div class="img_txt">
                             <p>Missions</p>
-                            <img src="arrowup.png" alt="">
+                            <img src="static/images_html/arrowup.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -159,20 +153,18 @@
         <div class="explore1">
             <div class="explore1_container container">
                 <h1>Explore the Universe from your Inbox</h1>
-                <p class="p6">Stay up-to-date on the latest news from NASA–from Earth to the Moon, the Solar System and
-                    beyond.</p>
+                <p class="p6">Stay up-to-date on the latest news from NASA–from Earth to the Moon, the Solar System and beyond.</p>
                 <p class="p7">We will never share your email address. <span>Privacy Policy</span></p>
-                <a href="#">Sign Up <img src="arrowup.png" alt=""></a>
+                <a href="#">Sign Up <img src="static/images_html/arrowup.png" alt=""></a>
             </div>
         </div>
     </main>
     <footer>
         <div class="footer_container container">
             <div class="content1">
-                <img src="logo.png" alt="">
+                <img src="static/images_html/logo.png" alt="">
                 <h4>National Aeronautics and Space Administration</h4>
-                <p>NASA explores the unknown in air and space, innovates for the benefit of humanity, and inspires the
-                    world through discovery.</p>
+                <p>NASA explores the unknown in air and space, innovates for the benefit of humanity, and inspires the world through discovery.</p>
                 <a href="#">About NASA's Mission</a>
             </div>
             <ul>
@@ -199,5 +191,4 @@
         </div>
     </footer>
 </body>
-
 </html>
